infrastructure/kubequery/internal/k8s/networking/testdata/ingress_class_test.json
{
    "apiVersion": "networking.k8s.io/v1",
    "kind": "IngressClass",
    "metadata": {
        "annotations": {
            "ingressclass.kubernetes.io/is-default-class": "true",
            "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"IngressClass\",\"metadata\":{\"annotations\":{\"ingressclass.kubernetes.io/is-default-class\":\"true\"},\"name\":\"public\"},\"spec\":{\"controller\":\"k8s.io/ingress-nginx\"}}\n"
        },
        "creationTimestamp": "2021-01-21T01:04:07Z",
        "generation": 1,
        "managedFields": [
            {
                "apiVersion": "networking.k8s.io/v1",
                "fieldsType": "FieldsV1",
                "fieldsV1": {
                    "f:metadata": {
                        "f:annotations": {
                            ".": {},
                            "f:ingressclass.kubernetes.io/is-default-class": {},
                            "f:kubectl.kubernetes.io/last-applied-configuration": {}
                        }
                    },
                    "f:spec": {
                        "f:controller": {}
                    }
                },
                "manager": "kubectl-client-side-apply",
                "operation": "Update",
                "time": "2021-01-21T01:04:07Z"
            }
        ],
        "name": "public",
        "resourceVersion": "450123",
        "selfLink": "/apis/networking.k8s.io/v1/ingressclasses/public",
        "uid": "dab8c076-3158-4a4a-8ee4-5632990ce074"
    },
    "spec": {
        "controller": "k8s.io/ingress-nginx"
    }
}
