infrastructure/kubequery/internal/k8s/networking/testdata/ingress_test.json
{
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
        "creationTimestamp": "2021-01-21T01:09:04Z",
        "generation": 1,
        "labels": {
            "app": "jaeger",
            "app.kubernetes.io/component": "query-ingress",
            "app.kubernetes.io/instance": "simplest",
            "app.kubernetes.io/managed-by": "jaeger-operator",
            "app.kubernetes.io/name": "simplest-query",
            "app.kubernetes.io/part-of": "jaeger"
        },
        "managedFields": [
            {
                "apiVersion": "extensions/v1beta1",
                "fieldsType": "FieldsV1",
                "fieldsV1": {
                    "f:metadata": {
                        "f:labels": {
                            ".": {},
                            "f:app": {},
                            "f:app.kubernetes.io/component": {},
                            "f:app.kubernetes.io/instance": {},
                            "f:app.kubernetes.io/managed-by": {},
                            "f:app.kubernetes.io/name": {},
                            "f:app.kubernetes.io/part-of": {}
                        },
                        "f:ownerReferences": {
                            ".": {},
                            "k:{\"uid\":\"95d303e8-d347-4f8f-b008-a4da3e44b847\"}": {
                                ".": {},
                                "f:apiVersion": {},
                                "f:controller": {},
                                "f:kind": {},
                                "f:name": {},
                                "f:uid": {}
                            }
                        }
                    },
                    "f:spec": {
                        "f:backend": {
                            ".": {},
                            "f:serviceName": {},
                            "f:servicePort": {}
                        }
                    }
                },
                "manager": "jaeger-operator",
                "operation": "Update",
                "time": "2021-01-21T01:09:04Z"
            }
        ],
        "name": "simplest-query",
        "namespace": "default",
        "ownerReferences": [
            {
                "apiVersion": "jaegertracing.io/v1",
                "controller": true,
                "kind": "Jaeger",
                "name": "simplest",
                "uid": "95d303e8-d347-4f8f-b008-a4da3e44b847"
            }
        ],
        "resourceVersion": "451926",
        "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/ingresses/simplest-query",
        "uid": "0cdc9181-0cb1-43bd-97b4-e31c864a13e2"
    },
    "spec": {
        "defaultBackend": {
            "service": {
                "name": "simplest-query",
                "port": {
                    "number": 16686
                }
            }
        }
    },
    "status": {
        "loadBalancer": {}
    }
}
