infrastructure/kubequery/internal/k8s/networking/testdata/network_policy_test.json
{
    "apiVersion": "v1",
    "items": [
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "metadata": {
                "annotations": {
                    "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"NetworkPolicy\",\"metadata\":{\"annotations\":{},\"name\":\"test-network-policy\",\"namespace\":\"default\"},\"spec\":{\"egress\":[{\"ports\":[{\"port\":5978,\"protocol\":\"TCP\"}],\"to\":[{\"ipBlock\":{\"cidr\":\"10.0.0.0/24\"}}]}],\"ingress\":[{\"from\":[{\"ipBlock\":{\"cidr\":\"172.17.0.0/16\",\"except\":[\"172.17.1.0/24\"]}},{\"namespaceSelector\":{\"matchLabels\":{\"p [...]
                },
                "creationTimestamp": "2021-01-22T15:08:26Z",
                "generation": 1,
                "managedFields": [
                    {
                        "apiVersion": "networking.k8s.io/v1",
                        "fieldsType": "FieldsV1",
                        "fieldsV1": {
                            "f:metadata": {
                                "f:annotations": {
                                    ".": {},
                                    "f:kubectl.kubernetes.io/last-applied-configuration": {}
                                }
                            },
                            "f:spec": {
                                "f:egress": {},
                                "f:ingress": {},
                                "f:podSelector": {},
                                "f:policyTypes": {}
                            }
                        },
                        "manager": "kubectl-client-side-apply",
                        "operation": "Update",
                        "time": "2021-01-22T15:08:26Z"
                    }
                ],
                "name": "test-network-policy",
                "namespace": "default",
                "resourceVersion": "536004",
                "selfLink": "/apis/networking.k8s.io/v1/namespaces/default/networkpolicies/test-network-policy",
                "uid": "ef70a000-9460-4098-9100-1d2b4bf608e1"
            },
            "spec": {
                "egress": [
                    {
                        "ports": [
                            {
                                "port": 5978,
                                "protocol": "TCP"
                            }
                        ],
                        "to": [
                            {
                                "ipBlock": {
                                    "cidr": "10.0.0.0/24"
                                }
                            }
                        ]
                    }
                ],
                "ingress": [
                    {
                        "from": [
                            {
                                "ipBlock": {
                                    "cidr": "172.17.0.0/16",
                                    "except": [
                                        "172.17.1.0/24"
                                    ]
                                }
                            },
                            {
                                "namespaceSelector": {
                                    "matchLabels": {
                                        "project": "myproject"
                                    }
                                }
                            },
                            {
                                "podSelector": {
                                    "matchLabels": {
                                        "role": "frontend"
                                    }
                                }
                            }
                        ],
                        "ports": [
                            {
                                "port": 6379,
                                "protocol": "TCP"
                            }
                        ]
                    }
                ],
                "podSelector": {
                    "matchLabels": {
                        "role": "db"
                    }
                },
                "policyTypes": [
                    "Ingress",
                    "Egress"
                ]
            }
        }
    ],
    "kind": "List",
    "metadata": {
        "resourceVersion": "",
        "selfLink": ""
    }
}
